--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,21 @@
 *.pyc
 *__pycache__*
 .idea/
+
+# Distribution
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+.installed.cfg
+MANIFEST
