--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps=
   freezegun==0.3.12
   -rrequirements.txt
 commands=
-  pytest -s {posargs}
+  pytest {posargs}
 setenv =
   ORIGO_CLIENT_ID = my-origio-user
   ORIGO_CLIENT_SECRET = my-origo-password
