Mypy added to tox and gh actions testing

--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Install dependencies
       run: pip install tox
     - name: Test with tox
-      run: tox -e py,flake8,black
+      run: tox -e py,flake8,black,mypy
