--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,flake8,black
+envlist = py36,py37,py38,flake8,black,mypy
 
 [testenv]
 deps=
@@ -30,6 +30,14 @@ deps =
   flake8
 commands =
   flake8
+
+[testenv:mypy]
+skip_install = true
+deps =
+  mypy
+  -rrequirements.txt
+commands =
+  mypy -p origo
 
 [flake8]
 # https://github.com/ambv/black/blob/master/.flake8
