Rename module okdata.sdk
Rename from origo.sdk to okdata.sdk

--- a/tox.ini
+++ b/tox.ini
@@ -37,7 +37,7 @@ deps =
   mypy
   -rrequirements.txt
 commands =
-  mypy -p origo
+  mypy -p okdata
 
 [flake8]
 # https://github.com/ambv/black/blob/master/.flake8
