Replace "origo" with "okdata"
 - Config moves to '~/.okdata'
 - Env variables are now OKDATA_*

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,6 @@ envlist = py36,py37,py38,flake8,black,mypy
 [testenv]
 deps=
   pytest
-  requests==2.22.0
   requests-mock==1.6.0
   pytest-mock==1.12.1
   python-dateutil==2.8.0
@@ -13,8 +12,8 @@ deps=
 commands=
   pytest {posargs}
 setenv =
-  ORIGO_CLIENT_ID = my-origio-user
-  ORIGO_CLIENT_SECRET = my-origo-password
+  OKDATA_CLIENT_ID = my-okdata-user
+  OKDATA_CLIENT_SECRET = my-okdata-password
 
 
 [testenv:black]
