Fix mypy errors and lock the version

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
 [testenv:mypy]
 skip_install = true
 deps =
-  mypy
+  mypy==0.991
   types-requests==2.25.12
   -rrequirements.txt
 commands =
