Don't rely on the `exp` fields of unsigned JWTs
Don't decode access token/refresh token JWTs unsigned to read out the
`exp` field, but rely on the `expires_at`/`refresh_expires_at` fields
received together with the tokens instead.

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ envlist = py38,py39,py310,py311,py312,flake8,black,mypy
 [testenv]
 deps=
   freezegun==0.3.12
-  pytest==6.2.5
+  PyJWT==2.8.0
   pytest-mock==1.12.1
+  pytest==6.2.5
   python-dateutil==2.8.0
   requests-mock==1.6.0
   -rrequirements.txt
