Add support for Python 3.13
Also drop support for Python 3.8, which reached its end of life
at 2024-10-07.

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
-envlist = py38,py39,py310,py311,py312,flake8,black,mypy
+envlist = py39,py310,py311,py312,py313,flake8,black,mypy
 
 [testenv]
 deps=
-  freezegun==0.3.12
-  PyJWT==2.8.0
-  pytest-mock==1.12.1
-  pytest==6.2.5
-  python-dateutil==2.8.0
-  requests-mock==1.6.0
+  freezegun
+  PyJWT
+  pytest
+  pytest-mock
+  python-dateutil
+  requests-mock
   -rrequirements.txt
 commands=
   pytest {posargs}
