--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,12 @@
-.venv/
-.tox/
-*.egg
-*.egg-info
+.build_venv/
+.tox
+.venv
+*egg*
 *.pyc
-*__pycache__*
+
 .idea/
 
-# Distribution
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-.installed.cfg
-MANIFEST
+*egg-info/
+__pycache__*
