--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39,py310,py311,py312,py313,flake8,black,mypy
+envlist = py310,py311,py312,py313,py314,flake8,black,mypy
 
 [testenv]
 deps=
@@ -33,8 +33,8 @@ commands =
 [testenv:mypy]
 skip_install = true
 deps =
-  mypy==0.991
-  types-requests==2.25.12
+  mypy
+  types-requests
   -rrequirements.txt
 commands =
   mypy -p okdata
